--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@ a {
 body{
   background-color:var( --primary-color);
   position: relative;
-  
+  width: 100vw;
+  height: 100vh;
 
 }
 
@@ -105,13 +106,15 @@ nav a {
   object-fit:cover;/*ajusta elemento dentro de containe preservanso a proporção e o aspecto*/
   z-index: -1; /*Diz o grau de empilhameto/*/
 } 
-
+  .name{
+    display:flex
+  }
 
   h1{
   position:absolute;
-  top:50%;
+  top:40%;
   left:50%;
-  font-size:4em;
+  font-size:3em;
   font-family: var(--font-primary);
   transform: translate(-50%, -50%);
   color:var(--font-color);
@@ -120,9 +123,9 @@ nav a {
 
  h2{
   position:absolute;
-  top:60%;
+  top:50%;
   left:50%;
-  font-size:3em;
+  font-size:2em;
   font-family: var(--font-primary);
   transform: translate(-50%, -50%);
   color: var(--font-color)
@@ -135,6 +138,7 @@ nav a {
 
 .navBar{
 display: flex;
+flex-direction: row;
 
 }
 
@@ -154,10 +158,44 @@ display: flex;
 
 section{
   height: 100vh;
-  padding: 50px;
+  padding: 2%;
   display: flex;
   z-index: 3;
 }
+
+@media only screen and (max-width: 767px) {
+  /* Estilos para dispositivos móveis com largura máxima de 767 pixels */
+  h1{
+    font-size: 2em;
+  }
+
+  .video-container{
+    min-height: 100vh;
+    min-width: 100vw;
+  }
+  nav{
+    margin-right: 5%;
+  }
+
+  .icon-header{
+    margin-bottom: 10%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  /* Estilos para dispositivos com largura mínima de 768 pixels e largura máxima de 1023 pixels (tablets) */
+
+
+}
+
+@media only screen and (min-width: 1024px) {
+  /* Estilos para dispositivos com largura mínima de 1024 pixels (desktops) */
+
+
+  
+}
+
+
 
 /*Seção de  Sobre Mim */
 
@@ -310,9 +348,9 @@ color: var(--third-color);
   }
   
   .my-image img {
-    width: 100%; /* fazer a imagem ocupar toda a largura da célula */
+    width: 50%; /* fazer a imagem ocupar toda a largura da célula */
     height: auto; /* ajustar a altura proporcionalmente */
-    border-radius: 50%;
+    border-radius:50%;
   }
   
   .social {
@@ -323,9 +361,25 @@ color: var(--third-color);
     margin-top: 5%; /* aumentar a margem superior */
   }
 
- /*  .text-container {
-    font-size:8px;
-  } */
+  .title-about-me{
+    grid-area: title-about-me;
+    justify-self: center;/*alinha o item no*/
+    place-items: center;/* é como escrever: align-items: center;justify-items: center;*/
+    font-size: 2em;
+    padding: 2%;
+  }
+  
+  .sub-title-about-me{
+    font-size:1em;
+    
+  }
+  
+  .description{
+    font-size: small;
+  }
+  
+  
+ 
 
 }
 
@@ -342,6 +396,7 @@ color: var(--third-color);
   .my-image img {
     width: 100%; /* fazer a imagem ocupar toda a largura da célula */
     height: auto; /* ajustar a altura proporcionalmente */
+    border-radius:50%;
   }
   
   .social {
@@ -365,6 +420,7 @@ color: var(--third-color);
   .my-image img {
     width: 22em; /* voltar para o tamanho original */
     height: 30em; /* voltar para o tamanho original */
+   
   }
   
   .social {
@@ -420,15 +476,17 @@ color: var(--third-color);
 
 /* //--------------- carrosel em paginas */
 
+
 .projects {
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows:auto;
-  grid-gap:7%; /*espaçamento entre linhas e colunas*/
+  grid-gap:7% 7%; /*espaçamento entre linhas e colunas*/
   height:100%; 
 }
 
 .title-projects{
+  display: flex;
   align-items: center;
   color: var(--font-color);
   display: flex;
@@ -441,52 +499,6 @@ color: var(--third-color);
   padding: 1%;
 }
 
-.image-projects{
- display: none;
- 
-}
-  
-
-.carousel-selected{
-display: block;
-}
-
-
-.image-projects img{
- 
-  height:10em;
-  width:10em;
-  box-shadow: rgba(255, 255, 255, 0.27) 0px 0px 0.25em, rgba(255, 255, 255, 0.27) 0px 0.25em 1em;
-}
-
-/* .item-image img{rever isso
-  grid:gap 40px 40px;
-} */
-.carousel-nav{
-width: 100%;
-padding: 20px 0;
-position:relative;
-bottom:0;
-left:0;
-background-color: #dc3545;
-text-align: center;
-
-}
-
-.carousel-button{
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-  background-color:rgb(255, 252, 252);
-  border-radius: 50%;
-  margin: 0 5px;
-  cursor:pointer;
-}
-
-.carousel-button-selected{
-  background-color:rgb(255, 252, 252);
-}
-
 .find-classification{
   display: flex;
   flex-direction: row;
@@ -494,6 +506,8 @@ text-align: center;
   align-items: center;
   color:var(--font-color);
 }
+
+
 
 .project-sub-title{
   margin-right: 2em;
@@ -512,7 +526,111 @@ a:hover{
 #coment-projects{
   font-size:medium;
   color:var(--third-color);
+} 
+
+
+
+
+ 
+
+.carousel{
+  display:grid;
+  grid-template-columns: 3fr;
+  grid-template-rows:repeat(3,1fr);
+  height:68vh;/*adcionei para definir tamanho fixo container*/
+  grid-area:
+ "carousel-front"
+ "carousel-back"
+ "carousel-full"
+ "carousel-nav carousel-nav";
 }
+  
+
+.carousel-front{
+display: flex;
+justify-content: space-around;
+
+}
+
+.carousel-back{
+display: flex;
+justify-content: space-around;
+}
+
+.carousel-full{
+display: flex;
+justify-content: space-around;
+}
+
+
+.carousel.nav{
+grid-area:carousel-nav carousel-nav;
+}
+
+.carousel img{
+  height:8em;
+  width:8em;
+  box-shadow: rgba(255, 255, 255, 0.27) 0px 0px 0.25em, rgba(255, 255, 255, 0.27) 0px 0.25em 1em;
+}
+
+
+.carousel-nav{
+width: 100%;
+position:static;
+bottom:0;
+left:0;
+background-color:var(--primary-color);
+text-align: center;
+height: 1em;
+
+}
+
+.carousel-button{
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background-color:rgb(255, 252, 252);
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor:pointer;
+  
+}
+
+.carousel-button-selected{
+  background-color:var(--fourth-color);
+  width:14px;
+  height:14px;
+}
+
+
+.carousel-selected{
+  display: none;
+}
+
+
+
+@media only screen and (max-width: 767px) {
+  /* Estilos para dispositivos móveis com largura máxima de 767 pixels */
+.image-projects img{
+  width: 7em;
+  height: 7em;
+}
+ 
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  /* Estilos para dispositivos com largura mínima de 768 pixels e largura máxima de 1023 pixels (tablets) */
+ 
+
+}
+
+@media only screen and (min-width: 1024px) {
+  /* Estilos para dispositivos com largura mínima de 1024 pixels (desktops) */
+
+
+  
+}
+
 
 /************************************************Contact-me***************************************/
 
@@ -677,5 +795,59 @@ border-right:solid 3px var(--third-color);
 
 .highlights{
   color: var(--font-color);
-font-weight: bold;
+  font-weight: bold;
+  }
+
+@media only screen and (max-width: 767px) {
+  /* Estilos para dispositivos móveis com largura máxima de 767 pixels */
+  .contact-me {
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "title-contact-me"
+      "my-contact"
+      "form-contact-me";
+  }
+  .my-contact {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "title-my-contact"
+      "sub-title-my-contact icons-contact";
+    margin-bottom: 1%;
+    margin-top: 4%;
+    padding: 3%;
+  }
+  .form-contact-me {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "form-name"
+      "form-email"
+      "form-subject"
+      "form-message";
+    column-gap: 0;
+    align-self: center;
+  }
+
+  .form-message{
+    display: grid;
+    grid-area:form-message;
+    height: 75%;
+  } 
+   
+ 
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  /* Estilos para dispositivos com largura mínima de 768 pixels e largura máxima de 1023 pixels (tablets) */
+  
+
+}
+
+@media only screen and (min-width: 1024px) {
+  /* Estilos para dispositivos com largura mínima de 1024 pixels (desktops) */
+
+
+  
 }
